--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11-dev", "pypy3"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14", "pypy3"]
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -31,18 +31,14 @@ jobs:
       - name: "Install dependencies"
         run: |
           set -xe
-          python -VV
-          python -m site
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade virtualenv tox tox-gh-actions          
-      - name: "Run tox targets for ${{ matrix.python-version }}"
-        run: "python -m tox -c .ci_tox.ini"
-
+          python -m pip install --upgrade tox tox-gh-actions
+      - name: "Run tox for ${{ matrix.python-version }}"
+        run: "python -m tox"
       - name: "Report to coveralls"
         # coverage is only created in the py39 environment
         # --service=github is a workaround for bug
         # https://github.com/coveralls-clients/coveralls-python/issues/251
-        if: "matrix.python-version == '3.9'"
+        if: "matrix.python-version == '3.10'"
         run: |
           pip install coveralls
           coveralls --service=github
